--- a/hackathon/MK/BrainAtlas/brainRegionListTest.ui
+++ b/hackathon/MK/BrainAtlas/brainRegionListTest.ui
@@ -674,5 +674,6 @@
  </connections>
  <slots>
   <slot>neuronInvolvedRegionClicked()</slot>
+  <slot>regionSelected(int,int)</slot>
  </slots>
 </ui>
